css/main.css
/* ... */
.productSpec__container {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  gap: 30px;
}

.product__image__container iframe {
  border: none;
  border-radius: 10px;
}

.image__reminder {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}

.arrow {
  position: relative;
  left: 7.5%;
  margin-top: 2.5%;
  font-size: 50px;
}

.arrow:hover {
  cursor: pointer;
}

/*Tier page 2*/
.tier2__title {
  color: white;
  text-align: center;
  font-size: 32px;
  margin: 0;
  padding: 30px 0;
  font-weight: 1000;
  text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, 0 0 42px #0fa, 0 0 82px #0fa, 0 0 92px #0fa, 0 0 102px #0fa, 0 0 151px #0fa;
}

.flex__container {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
}

.tier__2 {
  -webkit-transition: all 0.5s ease-in-out;
  transition: all 0.5s ease-in-out;
  margin: 0;
  padding: 0px;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
  font-family: 'Poppins';
  width: 100%;
  min-height: 120vh;
  background-image: url("../images/sneakerbackground.jpg");
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover;
  opacity: 95%;
}

.wrapper {
  width: 900px;
  margin: 5% auto;
}

.tier__image {
  width: 33%;
  background: #201f1f;
  float: left;
  -webkit-box-shadow: 1px 1px 20px rgba(8, 7, 7, 0.5);
          box-shadow: 1px 1px 20px rgba(8, 7, 7, 0.5);
  text-align: center;
  -webkit-transition: 0.9s;
  transition: 0.9s;
  opacity: 90%;
}

.tier__image {
  position: relative;
  width: 350px;
  display: block;
  height: auto;
}

.timage__img {
  display: block;
  width: 100%;
}

.timage__overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  right: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.6);
  color: white;
  font-family: 'Quicksand', sans-serif;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  opacity: 0;
  position: absolute;
  bottom: 0;
  overflow: hidden;
  -webkit-transition: .5s ease;
  transition: .5s ease;
}

.timage__overlay a {
  text-decoration: none;
  background: #2fcacd;
  color: white;
  padding: 10px 60px;
  display: inline-block;
  margin: 10% auto;
  text-transform: uppercase;
  font-weight: bold;
}

.timage__overlay:hover {
  opacity: 1;
  color: white;
  width: 100%;
  border-style: 0 0 15px #080808;
  z-index: 1;
  border: 3px solid #08f9f1;
  -webkit-box-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, 0 0 42px #0fa, 0 0 82px #0fa, 0 0 92px #0fa, 0 0 102px #0fa, 0 0 151px #0fa;
          box-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, 0 0 42px #0fa, 0 0 82px #0fa, 0 0 92px #0fa, 0 0 102px #0fa, 0 0 151px #0fa;
}

.timage__title {
  font-size: 2em;
  font-weight: bold;
  left: auto;
}

.timage__rewards {
  font-size: 1.25;
  margin-top: 0.25em;
}

.tier2__title h1 {
  color: #1d1311;
  font-size: 32px;
  margin: 0;
  padding: 30px 0;
  text-align: center;
  font-weight: 1000;
}

.timage__overlay a {
  text-decoration: none;
  color: white;
  padding: 10px 60px;
  display: inline-block;
  margin: 10% auto;
  text-transform: uppercase;
  font-weight: bold;
}

.infoSections__container {
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: 1fr;
      grid-template-columns: 1fr;
  height: 100%;
}

.infoSection__container {
  -webkit-transition: all 0.5s ease-in-out;
  transition: all 0.5s ease-in-out;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  padding: 0px 50px;
  margin: 30px 30px;
  overflow: hidden;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  height: 100%;
}

.infoSection__container:nth-child(even) {
  border-top: 1px solid #000000;
  border-bottom: 1px solid #000000;
  -webkit-box-orient: vertical;
  -webkit-box-direction: reverse;
      -ms-flex-direction: column-reverse;
          flex-direction: column-reverse;
}

.image__container {
  height: 150px;
  width: 300px;
  margin: 30px;
}

.image__container > img {
  -o-object-fit: contain;
     object-fit: contain;
  height: 100%;
  width: 100%;
}

.info__container {
  line-height: 30px;
}

.aboutUs__video {
  position: fixed;
  bottom: 10px;
  right: 10px;
}

/*Navigation bar*/
.navbar__container {
  visibility: hidden;
  -webkit-transition: all 0.5s ease-in-out;
  transition: all 0.5s ease-in-out;
  width: 100%;
  top: -100vh;
  height: 100vh;
  position: fixed;
  z-index: 10;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  background-color: black;
}

.navbar__container.open {
  -webkit-transform: translateY(100vh);
          transform: translateY(100vh);
}

.navbar__container.open {
  visibility: visible;
}
/* ... */

